k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kayaka-re
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kayaka-re
  template:
    metadata:
      labels:
        app: kayaka-re
    spec:
      containers:
        - name: kayaka-re
          image: naveensasalu/kayaka-re:2f493a201a24eff3fb82206c1b7a1644e489eb08
          ports:
            - containerPort: 80
