k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kayaka-service
spec:
  selector:
    app: kayaka-re
  ports:
    - port: 80
      targetPort: 80
